deploy: 6437e8f897736a3ecf8d47d49ed9b836ca5997ff

--- a/constify/macro.constify.html
+++ b/constify/macro.constify.html
@@ -11,7 +11,7 @@
 </div><details class="rustdoc-toggle top-doc" open><summary class="hideme"><span>Expand description</span></summary><div class="docblock"><p>Convert runtime values to <code>const</code>s.</p>
 <p>This macro compares runtime expressions to the provided constants and evaluates the given
 expression with the matching constants.
-All cases must be covered, to match only a subset of values use <a href="macro.try_constify.html" title="try_constify"><code>try_constify</code></a>.</p>
+All cases must be covered; to match only a subset of values use <a href="macro.try_constify.html" title="try_constify"><code>try_constify</code></a>.</p>
 <p>The expressions are evaluated in the order they are provided.</p>
 <p>An example:</p>
 
