--- a/src/constify/lib.rs.html
+++ b/src/constify/lib.rs.html
@@ -254,7 +254,7 @@
 <span class="doccomment">///</span>
 <span class="doccomment">/// This macro compares runtime expressions to the provided constants and evaluates the given</span>
 <span class="doccomment">/// expression with the matching constants.</span>
-<span class="doccomment">/// All cases must be covered, to match only a subset of values use [`try_constify`].</span>
+<span class="doccomment">/// All cases must be covered; to match only a subset of values use [`try_constify`].</span>
 <span class="doccomment">///</span>
 <span class="doccomment">/// The expressions are evaluated in the order they are provided.</span>
 <span class="doccomment">///</span>
